--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="https://educationeverest.org/" target="_blank" style="font-size: 20px;top: 6px;">Home </a></li>
-        <li><a href="Dashboard.aspx"><img src="images/header_dashboard_button_1_.png" style="margin: -15px;height: 65px"></a></li>
+        <li><a href="Dashboard.aspx" style="font-size: 20px;top: 6px;">Dashboard</a></li>
         <li style="color: transparent;">home</li>
       </ul>
       <div class="navbar-form navbar-left">
@@ -108,7 +108,7 @@
   
 <div class="container-fluid text-center">    
   <div class="row content" style="min-height: 100vh;height: 1000px">
-    <div class="col-sm-2 sidenav text-left side-menu">
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 sidenav text-left side-menu">
 
       <div class="dropdown" style="margin-bottom: 10px;">
     <a data-toggle="collapse" data-target="#clps1" id="applicationDashbord" class="main_list NormalCharacterStyle25" href="Dashboard.aspx">My Applications<div class="icon-arrow-right pull-right"><span class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps1"></span></div></a>
@@ -119,7 +119,7 @@
     <a data-toggle="collapse" id="fileAdmission" data-target="#clps2" class="main_list NormalCharacterStyle25">File Admission App<div class="icon-arrow-right pull-right"><span class="glyphicon glyphicon-chevron-down dropdown_icon " data-toggle="collapse" data-target="#clps2"></span></div></a>
     <div class="collapse" id="clps2">
       <br/>
-        <li class="menu_list"><a href="Personal_Detail" class="NormalCharacterStyle24" id="prsonalDetail">Personal Detail</a>&nbsp;&nbsp;&nbsp;&nbsp;<span><img src="~/images/check_icon.png" runat="server" id="imgTickPersonalDetails"  visible="false"   style="float:right;height:20px;width:20px" /></span></li>
+        <a href="Personal_Detail" class="NormalCharacterStyle24" id="prsonalDetail"><li class="menu_list"><p>Personal Detail<span><img src="~/images/check_icon.png" runat="server" id="imgTickPersonalDetails"  visible="false"   style="float:right;height:20px;width:20px" /></span></p></a></li>
         <li class="menu_list"><a href="choices" class="NormalCharacterStyle24" id="makeChoices">Make Choices</a>&nbsp;&nbsp;&nbsp;&nbsp;<span><img src="~/images/check_icon.png" runat="server" id="imgTickChoices"  visible="false"  style="float:right;height:20px;width:20px"  /></span></li>
         <li class="menu_list"><a href="educational_detail" id="educationalDocument"  class="NormalCharacterStyle24" >Educational Details</a>&nbsp;&nbsp;&nbsp;&nbsp;<span><img src="~/images/check_icon.png" runat="server" id="imgTickEducationDetails"  visible="false" style="float:right;height:20px;width:20px"  /></span></li>
         <li class="menu_list"><a href="Test_Result" class="NormalCharacterStyle24" id="testResult">Test Results</a>&nbsp;&nbsp;&nbsp;&nbsp;<span><img src="~/images/check_icon.png" runat="server" id="imgTickTestResults"  visible="false"  style="float:right;height:20px;width:20px"  /></span></li>
@@ -142,7 +142,7 @@
 </div>
 
       <div class="dropdown"  style="margin-bottom: 10px;">
-    <a data-toggle="collapse" data-target="#clps3" class="main_list NormalCharacterStyle25" href="Payments.aspx">My Payments<div class="icon-arrow-right pull-right"><span class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps3"></span></div></a>
+    <a data-toggle="collapse" data-target="#clps3" id="mypayments" class="main_list NormalCharacterStyle25" href="Payments.aspx">My Payments<div class="icon-arrow-right pull-right"><span class="glyphicon glyphicon-chevron-right drop_down_icon_1_" data-toggle="collapse" data-target="#clps3"></span></div></a>
  
 </div>
 
@@ -152,7 +152,7 @@
             </asp:ContentPlaceHolder>
     </form>
     <script type="text/javascript">
-  $('#menu_toggle').on('click', function () {
+        $('#applicationDashbord').on('click', function () {
     var iSelector = $(this).find('i:first');
     if (iSelector.hasClass('glyphicon-chevron-down')) {
         iSelector.removeClass('glyphicon-chevron-down')
@@ -162,7 +162,7 @@
         iSelector.addClass('glyphicon-chevron-down')
     }
 });
-  $('#menu_toggle2').on('click', function () {
+        $('#fileAdmission').on('click', function () {
     var iSelector = $(this).find('i:first');
     if (iSelector.hasClass('glyphicon-chevron-down')) {
         iSelector.removeClass('glyphicon-chevron-down')
@@ -172,7 +172,7 @@
         iSelector.addClass('glyphicon-chevron-down')
     }
 });
-  $('#menu_toggle3').on('click', function () {
+        $('#mypayments').on('click', function () {
     var iSelector = $(this).find('i:first');
     if (iSelector.hasClass('glyphicon-chevron-down')) {
         iSelector.removeClass('glyphicon-chevron-down')
