--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -729,7 +729,7 @@
 	background-color: transparent;
 	border-top: none;border-left: none;border-right: none;
 	border-bottom: 1px Solid #2196F3;;
-	width : 280px;
+	width : 95%;
 	height : 24px;
 }
 .input_CNIC_no
@@ -739,7 +739,7 @@
 	background-color: transparent;
 	border-top: none;border-left: none;border-right: none;
 	border-bottom: 1px Solid #2196F3;;
-	width : 280px;
+	width : 95%;
 	height : 22px;
 }
 .input_father_CINC_no
@@ -749,7 +749,7 @@
 	background-color: transparent;
 	border-top: none;border-left: none;border-right: none;
 	border-bottom: 1px Solid #2196F3;;
-	width : 351px;
+	width : 95%;
 	height : 22px;
 }
 .input_father_name
@@ -759,7 +759,7 @@
 	background-color: transparent;
 	border-top: none;border-left: none;border-right: none;
 	border-bottom: 1px Solid #2196F3;;
-	width : 350px;
+	width : 95%;
 	height : 24px;
 }
 .input_DOB
@@ -769,7 +769,7 @@
 	background-color: transparent;
 	border-top: none;border-left: none;border-right: none;
 	border-bottom: 1px Solid #2196F3;;
-	width : 280px;
+	width : 95%;
 	height : 22px;
 }
 .input_nationality
@@ -779,7 +779,7 @@
 	background-color: transparent;
 	border-top: none;border-left: none;border-right: none;
 	border-bottom: 1px Solid #2196F3;;
-	width : 351px;
+	width : 95%;
 	height : 22px;
 }
 .upload_icon_text
@@ -880,7 +880,7 @@
 }
 .card_bg
 {
-	height : 220px;
+	/*height : 220px;*/
 	box-shadow : 2px 2px 2px rgba(114, 114, 114, 0.75);
 	filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=2, OffY=2, Color='#727272') ;
 }
@@ -1578,7 +1578,6 @@ preference_select_campus1{
 {
   background : #2196F3;
   background : rgba(33, 150, 243, 1);
-  margin-left: 110px;
   width : 350px;
   height : 48px;
   border-radius : 2px;
@@ -1595,7 +1594,6 @@ preference_select_campus1{
 {
   background: rgba(33, 150, 243, 0);
   border: 1px solid #2196F3;
-  margin-left: 110px;
   width : 350px;
   height : 48px;
   border-radius : 2px;
