--- a/EducationEverest/css/style.css
+++ b/EducationEverest/css/style.css
@@ -425,4 +425,7 @@ input[type="text"], input[type="password"], textarea, select {
 .mybspc1{
     padding-bottom: 1%;
 }
-/*Shrinking Side Navbar */
+/*Panel Body No padding*/
+.np{
+    padding: 0 !important;
+}
