--- a/EducationEverest/Content/Site.css
+++ b/EducationEverest/Content/Site.css
@@ -57,9 +57,8 @@ textarea {
 }
 
 .tag {
-  background: #C0C0C0;
-  
-  color: #000000;
+  background: #00a99d !important;
+  color: white !important;
   display: inline-block;
   height: 26px;
   line-height: 26px;
@@ -84,8 +83,13 @@ textarea {
 }
 
 .tag:hover {
-  background-color: #e9ecef;
-  color: #007bff;
+  background-color: #ff99b4 !important;
+  color: white !important;
+}
+
+.tag:hover a{
+    color: white !important;
+    font-weight:600 !important;
 }
 
 .tag:hover::after {
