--- a/EducationEverest/css/File_admission_application.css
+++ b/EducationEverest/css/File_admission_application.css
@@ -1099,7 +1099,34 @@ div.callout {
 }
 
 .callout.bottom::before {
-    left: 10%;
+    left: 35%;
+    top: -20px;
+    border-bottom: 10px solid #F2F2F2;
+    ;
+}
+
+div.callout1 {
+    background-color: #F2F2F2;
+    background-image: -moz-linear-gradient(top, #F2F2F2, #F2F2F2);
+    position: relative;
+    box-shadow: 0px 0px 20px #999;
+    margin-top: 160px;
+    margin-left: 15px;
+    min-height: 250px;
+    width: 610px;
+    /*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
+}
+
+.callout1::before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    border: 0.8em solid transparent;
+    position: absolute;
+}
+
+.callout1.bottom::before {
+    left: 60%;
     top: -20px;
     border-bottom: 10px solid #F2F2F2;
     ;
@@ -1158,7 +1185,6 @@ div.callout {
 .filter_results_details_callout {
     position: relative;
     box-shadow: 0px 0px 20px #999;
-    margin-top: 3px;
     /*box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset;*/
 }
 
@@ -1681,7 +1707,7 @@ preference_select_campus1 {
 .facebook_icon {
     background-image: url(../images/facebook_icon.png);
     background-repeat: no-repeat;
-    position: absolute;
+    /*position: absolute;*/
     width: 54px;
     height: 56px;
 }
@@ -1778,8 +1804,9 @@ preference_select_campus1 {
 }
 
 .results_cards {
-    height: 140px;
+    height: auto;
     width: 100%;
+    padding-bottom: 2%;
 }
 
 .rating_img {
@@ -1794,7 +1821,7 @@ preference_select_campus1 {
 
 .NormalCharacterStyle211 {
     font-family: Raleway;
-    font-size: 10px;
+    font-size: 11px;
     color: #999999;
     color: rgb(153, 153, 153);
 }
@@ -1831,6 +1858,14 @@ preference_select_campus1 {
     font-family: Raleway;
     font-weight: 500;
     font-size: 18px;
+    line-height: 22px;
+    color: #8CC63F;
+    color: rgb(140, 198, 63);
+}
+.NormalCharacterStyleGreen {
+    font-family: Raleway;
+    font-weight: 500;
+    font-size: 12px;
     line-height: 22px;
     color: #8CC63F;
     color: rgb(140, 198, 63);
