--- a/EducationEverest/Admin/Admin.master
+++ b/EducationEverest/Admin/Admin.master
@@ -23,6 +23,8 @@
     <link href="Content/css/datepicker.css" rel="stylesheet" />
     <link href="Content/Site.css" rel="stylesheet" />
     <link href="Content/css/MyStyle.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/css/style.css" />
+    <link rel="stylesheet" href="~/css/File_admission_application.css" />
     <!-- Bootstrap core JavaScript-->
     <style>
         .overlay {
@@ -66,19 +68,11 @@
                             
                         </li>
 
-                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Users">
-                            <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
+                        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Candidates">
+                            <a class="nav-link" href="AllCandidates.aspx">
                                 <i class="fa fa-fw fa-user-o"></i>
                                 <span class="nav-link-text">Candidates</span>
                             </a>
-                            <ul class="sidenav-second-level collapse" id="collapseMulti">
-                                <li>
-                                    <a href="AllCandidates.aspx">All Candidates</a>
-                                </li>
-                                <%--<li>
-                                    <a href="NewUser.aspx">Add New</a>
-                                </li>--%>
-                            </ul>
                         </li>
 
                         <%--<li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
