Latest Model Notifications

--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -41,6 +41,12 @@
         function excluirItemNotificacao(e) {
             $('#item_notification_' + e.id).remove()
         }
+
+        function notificationClicked(notfxnID) {
+            document.getElementById("<%= hf1.ClientID %>").value = notfxnID;
+            var clickButton = document.getElementById("<%= btn_notfxn.ClientID %>");
+            clickButton.click();
+        }
     </script>
 </head>
 
@@ -81,19 +87,25 @@
 
 
                 <ul class="nav navbar-nav navbar-right">
+                    
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <div id="div_notfxnBell" runat="server">
                             <span class="alertNotificacao">
                                 <img src="images/bell.png" /></span>
-                            <span class='badgeAlert'>3</span>
+                            <span class='badgeAlert'><asp:Label runat="server"  ID="lbl_Totalnotification"></asp:Label></span></div>
                             <%--<span class="caret"></span>--%>
                         </a>
                         <ul class="list-notificacao dropdown-menu">
-                            <li id='item_notification_1'>
-                                <div class="media">
+                        <asp:Repeater runat="server" ID="rptr_Notifications" OnItemDataBound="rptr_Notifications_ItemDataBound">
+                        <ItemTemplate>
+                            
+                            <li>
+                                <div class="media" id="div_listItem"  onclick="notificationClicked(<%# Eval("id") %>)" >
                                     <div class="media-left">
                                         <a href="#">
-                                            <img src="/images/notifi_payment_icon.png" />
+                                            <asp:Image runat="server" ID="img_notfxn" ImageUrl="/images/notifi_payment_icon.png" />
+                                            <%--<img src="/images/notifi_payment_icon.png" />--%>
                                         </a>
                                     </div>
                                     <div class="media-body">
@@ -101,17 +113,21 @@
                                             <button class='btn btn-danger btn-xs button_exclusao' id='1' onclick='excluirItemNotificacao(this)'>x</button>
                                         </div>--%>
                                         <p class="media-heading" style="font-size: 11px">
-                                            <strong>Your application has been created. Click to view</strong>
+                                            <strong><%# Eval("Title") %></strong>
 
                                         </p>
-                                        <p style="font-size: 10px; color: lightgray">Today, 6:15 PM</p>
+                                        <asp:Label runat="server" ID="lbl_Time" style="font-size: 10px; color: lightgray">Today</asp:Label>
                                     </div>
                                     <div class="media-right">
-                                        <img src="images/circle.png" class="media-object" style="width: 8px ;padding-top: 15px !important;" />
+                                        <asp:Image ImageUrl="images/circle.png" ID="img_Circle" runat="server" class="media-object" style="width: 8px ;padding-top: 15px !important;" />
+                                        <%--<img src="images/circle.png" id="img_Circle" class="media-object" style="width: 8px ;padding-top: 15px !important;" />--%>
                                     </div>
                                 </div>
                             </li>
-                            <li id='item_notification_2'>
+                            </ItemTemplate>
+                            </asp:Repeater>
+                            </ul>
+                           <%-- <li id='item_notification_2'>
                                 <div class="media">
                                     <div class="media-left">
                                         <a href="#">
@@ -119,9 +135,7 @@
                                         </a>
                                     </div>
                                     <div class="media-body">
-                                        <%--<div class='exclusaoNotificacao'>
-                                            <button class='btn btn-danger btn-xs button_exclusao' id='1' onclick='excluirItemNotificacao(this)'>x</button>
-                                        </div>--%>
+                                        
                                         <p class="media-heading" style="font-size: 11px">
                                             <strong>Your application has been created. Click to view</strong>
 
@@ -138,9 +152,7 @@
                                         </a>
                                     </div>
                                     <div class="media-body">
-                                        <%--<div class='exclusaoNotificacao'>
-                                            <button class='btn btn-danger btn-xs button_exclusao' id='1' onclick='excluirItemNotificacao(this)'>x</button>
-                                        </div>--%>
+                                       
                                         <p class="media-heading" style="font-size: 11px">
                                             <strong>Your application has been created. Click to view</strong>
 
@@ -148,7 +160,7 @@
                                         <p style="font-size: 10px; color: lightgray">Today, 6:15 PM</p>
                                     </div>
                                 </div>
-                            </li>
+                            </li>--%>
                             <%--<li id='item_notification_4'>
                                 <div class="media">
                                     <div class="media-body">
@@ -157,7 +169,7 @@
                                     </div>
                                 </div>
                             </li>--%>
-                        </ul>
+                        
                     </li>
                     <%-- <li><a href="#" style="margin-top: 5px;"><img src="images/header_notification_icon_1_.png"></a></li>--%>
                     <li class="dropdown" style="height: 60px;">
@@ -237,6 +249,8 @@
                     </div>
                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                     </asp:ContentPlaceHolder>
+                    <asp:HiddenField runat="server" ID="hf1" />
+                    <asp:Button ID="btn_notfxn" runat="server" OnClick="btn_notfxn_Click" style="display:none;" />
     </form>
     <script type="text/javascript">
         $('#applicationDashbord').on('click', function () {
