--- a/EducationEverest/Client.master
+++ b/EducationEverest/Client.master
@@ -223,7 +223,7 @@
             <br />
 
             <div class="container-fluid text-center">
-                <div class="row content" style="min-height: 100vh; height: 1000px">
+                <div class="row content" style="min-height: 200vh; height: 100vh">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 sidenav text-left side-menu">
 
                         <div class="dropdown" style="margin-bottom: 10px;">
